--- a/src/components/invitation.css
+++ b/src/components/invitation.css
@@ -1,11 +1,12 @@
 .invitationContainer {
-    margin: 1vw;
+    margin: 3vw 1vw 1vw 1vw;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
 .invitationCard {
+    box-shadow: rgba(0, 0, 0, 0.5) 0px 5px 10px;
     max-width: 60%;
     height: 100%;
     background-size: cover;
